2017-07-20	"It was all so different before everything changed."  (3)

		include/innocent-pear/rofl.h :
		- may now invoke 32-bit ioctl(...) syscall on Linux/x86-64
		- fixed typo

2017-07-08	"It was all so different before everything changed."  (2)

		include/innocent-pear/dawg.h :
		- interface change:  dawg_impl_1<...>, dawg_impl_2<...>, and
		  dawg<...> no longer add an implicit '\0' at the end of a
		  string
		- updated operator<<(...) to suppress a trailing '\0' at the
		  end of a string, if present

		include/innocent-pear/omg.h ,
		share/innocent-pear/omnomnom.lxx :
		- adds a trailing '\0' at the end of a scrambled string, to
		  agree with dawg.h's new interface

2017-07-03	"It was all so different before everything changed."

		include/innocent-pear/rofl.h :
		- may now invoke 32-bit syscalls, for Linux/x86-64 target

		GNUmakefile :
		- now does debug build of test-doge-abs-reloc test case, again

2017-07-02	"So little time, so little to do."  (3)

		GNUmakefile :
		- now passes output of ia16-elf programs to dos2unix

		configure :
		- now looks for dos2unix program build-side

2017-06-21	"So little time, so little to do."  (2)

		infra/travis-install-deps.sh :
		- now handles `arm-*hf,*' target specifiers properly

2017-06-20	"So little time, so little to do."

		.travis.yml :
		- now says e.g. `arm-linux-gnueabi,armv6' rather than
		  `armv6-linux-gnueabi', following lolwutconf/ changes

		GNUmakefile :
		- now handles `ia16-elf,*' in addition to `ia16-elf' target
		  specifier

		KeccakCodePackage/ :
		- bumped to 83f4063446

		lolwutconf/ :
		- bumped to 61b05be5c0

		infra/KeccakCodePackage.tar.xz ,
		infra/lolwutconf.tar.xz :
		- updated

2017-06-12	"Toddlers are the stormtroopers of the Lord of Entropy."  (3)

		include/innocent-pear/kthxbai.h :
		- more messing with IRQs (via port 0x21) on ia16-elf

2017-06-12	Removed unwanted type promotions and wrap-arounds.

		include/innocent-pear/bbq.h :
		- removed unwanted type promotions in `<<'s